[package]
name = "kont"
version = "0.1.0"
edition = "2021"

[dependencies]
 
bytemuck = { version = "1.20", default-features = false, features = ["derive", "min_const_generics"] }
spl-pod = { version = "0.2", default-features = false }
spl-token-2022-interface = {version="3.1.1" ,default-features = false }
solana-zero-copy = { version = "1.1", default-features = false }

