[package]
name = "kont-bridge-program"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib", "lib"]

[dependencies]
solana-program = "2.0"
kont = { git = "https://www.github.com/idorocodes/kont" } 
spl-token = { version = "9.0.0", default-features = false, features = ["no-entrypoint"] }
